--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 		</div>
 		<div class="row voffset-lg voffset">
 			<div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
-				<img alt="web agency, web design, logo design " src="img/quote.png" />
+				<img alt="web agency, web design, logo design " src="img/quote.webp" />
 			</div>
 		</div>
 	</div>
