--- a/contact.html
+++ b/contact.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <meta name="keywords" content="">
-    <meta name="description" content="">
+    <meta name="keywords" content="Web design, Design agency, Logo design atlanta, GoMike Designs">
+    <meta name="description" content="I'm Mike and your should hire me to build your website">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
     
@@ -30,21 +30,15 @@
 	<div class="container bloc-sm">
 		<nav class="navbar row">
 			<div class="navbar-header">
-				<a class="navbar-brand" href="index.html"><img src="img/atlanta%20web%20design%20logo.webp"  width='214.25' height='40' ></a>
+				<a class="navbar-brand" href="index.html"><img src="img/atlanta%20web%20design%20logo.webp" alt="logo GoMike Designs" width='214.25' height='40' ></a>
 				<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 				</button>
 			</div>
 			<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
 				<ul class="site-navigation nav navbar-nav">
-					<li>
-						<a href="index.html">Home</a>
-					</li>
-					<li>
-					</li>
-					<li>
-						<a href="contact.html">Contact</a>
-					</li>
+					<li><a href="index.html">Home</a></li>
+					<li><a href="contact.html">Contact</a></li>
 				</ul>
 			</div>
 		</nav>
@@ -60,7 +54,7 @@
 				<p class="text-center hero-bloc-text tc-white">
 					Let&rsquo;s talk web design!
 				</p>
-				<p class="text-center mg-lg tc-white tight-width-whitespace">
+				<p class="text-center mg-lg tc-white tight-width-whitespace info">
 					I&rsquo;m super excited that you want to work together.<br>Please fill in the form below or get in touch so I can learn about your project <br>and we can setup time to &nbsp;talk websites and Atlanta city love.
 				</p>
 			</div>
@@ -104,8 +98,8 @@
 				</form>
 			</div>
 			<div class="col-sm-6">
-				<p>
-					mike@gomikedesigns.com<br>+1 (404) 555-1234<br> <br>123 Peachtree Ave. Atlanta, GA<br>Available 9am–5pm, Mon-Fri <br> <br>Interested to learn about my freelace services? <br>Please visit my&nbsp;<a class="ltc-atomic-tangerine" href="index.html">other page</a>.
+				<p class="contact">
+					mike@gomikedesigns.com<br>+1 (404) 555-1234<br> <br>123 Peachtree Ave. Atlanta, GA<br>Available 9am–5pm, Mon-Fri <br> <br>Interested to learn about my freelace services? <br>Please visit my&nbsp;<a class="other-page" href="index.html">other page</a>.
 				</p>
 			</div>
 		</div>
@@ -123,28 +117,28 @@
 	<div class="container bloc-sm">
 		<div class="row">
 			<div class="col-sm-12">
-				<p class="text-center white">
+				<p class="text-center white info">
 					GoMike Designs - Web designer living and loving Atlanta.<br>
 				</p>
 				<nav class="row row-no-gutters social">
-					<div class="col-sm-3">
-						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-twitter icon-md"></span><br>Twitter</a>
+					<div class="col-xs-3">
+					<div class="text-center">
+							<a class="social white" href="index.html"><span class="fa fa-twitter icon-md"></span><br>Twitter</a>
 						</div>
 					</div>
-					<div class="col-sm-3">
+					<div class="col-xs-3">
 						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-facebook icon-md"></span><br>Facebook</a>
+							<a class="social white" href="index.html"><span class="fa fa-facebook icon-md"></span><br>Facebook</a>
 						</div>
 					</div>
-					<div class="col-sm-3">
+					<div class="col-xs-3">
 						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-dribbble icon-md"></span><br>Dribble</a>
+							<a class="social white" href="index.html"><span class="fa fa-dribbble icon-md"></span><br>Dribble</a>
 						</div>
 					</div>
-					<div class="col-sm-3">
+					<div class="col-xs-3">
 						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-instagram icon-md"></span><br>Instagram</a>
+							<a class="social white" href="index.html"><span class="fa fa-instagram icon-md"></span><br>Instagram</a>
 						</div>
 					</div>
 				</nav>
