--- a/index.html
+++ b/index.html
@@ -64,9 +64,8 @@
 </div>
 <!-- bloc-1-hero END -->
 
-<p class="title-text">I create websites and design graphics that help Atlanta companies become attractive and recognizable online.</p>
-
 <!-- bloc-2-services -->
+<h2 class="title-text">I create websites and design graphics that help Atlanta companies become attractive and recognizable online.</h2>
 <div class="bloc bgc-white l-bloc" id="bloc-2-services">
 	<div class="container bloc-md">
 
@@ -75,9 +74,9 @@
 				<div class="text-center">
 					<span class="et-icon-browser sm-shadow icon-dark-slate-blue icons icon-lg"></span>
 				</div>
-				<h1 class="mg-md text-center service-header">
+				<h3 class="mg-md text-center service-header">
 					Website Design
-				</h1>
+				</h3>
 				<p class="text-center ">
 					Whether you have a website that needs a refresh or you&rsquo;re starting from scratch, let&rsquo;s make a website that you can be proud of.
 				</p>
@@ -86,9 +85,9 @@
 				<div class="text-center">
 					<span class="et-icon-presentation sm-shadow icon-dark-slate-blue icons icon-lg"></span>
 				</div>
-				<h1 class="mg-md text-center service-header">
+				<h3 class="mg-md text-center service-header">
 					&nbsp;Website Strategy
-				</h1>
+				</h3>
 				<p class="text-center ">
 					Rather than suggesting trendy designs, I&rsquo;ll work with you to understand your business goals and make sure we design to help you reach those goals.<br>
 				</p>
@@ -97,9 +96,9 @@
 				<div class="text-center">
 					<span class="et-icon-edit sm-shadow icon-dark-slate-blue icons icon-lg"></span>
 				</div>
-				<h1 class="mg-md text-center service-header">
+				<h3 class="mg-md text-center service-header">
 					Logo Design
-				</h1>
+				</h3>
 				<p class="text-center ">
 					With your business representing Atlanta, your logo should shine. I&rsquo;ll work with you to create logo and brand identity that will impress people you meet in town and online.
 				</p>
@@ -108,8 +107,8 @@
 		
 	</div>
 </div>
-<!-- bloc-2-services END -->
 <p class="quote"><em>"Mike's an awesome <strong>freelance web designer!</strong> He captured the essence of our company in our website and has helped us <strong>double our online sales</strong> tor our shop in Atlanta."</em><br>Taylor Cook, project manager Apple Delights</p>
+<!-- bloc-2-services END -->
 
 <!-- bloc-3-what-i-do -->
 <div class="bloc tc-white bgc-atomic-tangerine bloc-bg-texture texture-paper b-parallax bg-atlanta-20made-20sign-20orange d-bloc" id="bloc-3-what-i-do">
@@ -119,7 +118,7 @@
 				<h2 class="mg-md text-center tc-white">
 					I love Atlanta, my hometown, and want to see all Atlanta businesses succeed. I help by offering web design services that help local businesses stand out and attract new customers online.<br>
 				</h2>
-				<p class="text-center white">
+				<p class="text-center white info">
 					I'm super excited you&rsquo;re here. I partner with creative entrepreneurs and local Atlanta business that are either starting or needing to renew their website to attract business. Whether you need a complete brand identity or a redesign of your website, I&rsquo;ll work with you to create something that looks great and structured to be found on Google.<br><br><a class="ltc-white bold-link" href="contact.html">Are you ready, contact me</a><br>
 				</p>
 			</div>
@@ -127,7 +126,7 @@
 	</div>
 </div>
 <!-- bloc-3-what-i-do END -->
-<p class="title-text">Websites I've designed and developed for Atlanta companies that resulted in more local business</p>
+<h2 class="title-text">Websites I've designed and developed for Atlanta companies that resulted in more local business</h2>
 <!-- bloc-4-portfolio -->
 <div class="bloc bgc-white bg-lines-h2-bg bg-repeat l-bloc" id="bloc-4-portfolio">
 	<div class="container bloc-lg jobs">
@@ -137,7 +136,7 @@
 				<h3 class="mg-md text-center">
 					Website for Atlanta&rsquo;s premiere Dog Sitters
 				</h3>
-				<p class="text-center">
+				<p class="text-center info">
 					I love dogs and was super excited to make a website for an Atlanta dog company.
 				</p>
 			</div>
@@ -146,7 +145,7 @@
 				<h3 class="mg-md text-center">
 					Web redesign for the best Atlanta&nbsp;cupcakes
 				</h3>
-				<p class="text-center">
+				<p class="text-center info">
 					They make the best cupcakes in Atlanta and I wanted to show this online.
 				</p>
 			</div>
@@ -157,7 +156,7 @@
 				<h3 class="mg-md text-center">
 					New logo and website for Atl + Gear - Atlanta&rsquo;s best tech gear shop
 				</h3>
-				<p class="text-center">
+				<p class="text-center info">
 					Whenever I&rsquo;m wanting to improve my web design skills, this shop inspires me.
 				</p>
 			</div>
@@ -166,7 +165,7 @@
 				<h3 class="mg-md text-center">
 					Atlanta&rsquo;s legal new website - Generating 30% more law clients with a refresh&nbsp;
 				</h3>
-				<p class="text-center">
+				<p class="text-center info">
 					A few months ago, I created their new website and it&rsquo;s bringing lots of leads.
 				</p>
 			</div>
@@ -195,28 +194,28 @@
 	<div class="container bloc-sm">
 		<div class="row">
 			<div class="col-sm-12">
-				<p class="text-center white">
+				<p class="text-center white info">
 					GoMike Designs - Web designer living and loving Atlanta.<br>
 				</p>
 				<nav class="row row-no-gutters social">
-					<div class="col-sm-3">
+					<div class="col-xs-3">
 						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-twitter icon-md"></span><br>Twitter</a>
+							<a class="social white" href="index.html"><span class="fa fa-twitter icon-md"></span><br>Twitter</a>
 						</div>
 					</div>
-					<div class="col-sm-3">
+					<div class="col-xs-3">
 						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-facebook icon-md"></span><br>Facebook</a>
+							<a class="social white" href="index.html"><span class="fa fa-facebook icon-md"></span><br>Facebook</a>
 						</div>
 					</div>
-					<div class="col-sm-3">
+					<div class="col-xs-3">
 						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-dribbble icon-md"></span><br>Dribble</a>
+							<a class="social white" href="index.html"><span class="fa fa-dribbble icon-md"></span><br>Dribble</a>
 						</div>
 					</div>
-					<div class="col-sm-3">
+					<div class="col-xs-3">
 						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-instagram icon-md"></span><br>Instagram</a>
+							<a class="social white" href="index.html"><span class="fa fa-instagram icon-md"></span><br>Instagram</a>
 						</div>
 					</div>
 				</nav>
