--- a/contact.html
+++ b/contact.html
@@ -6,8 +6,10 @@
     <meta name="description" content="I'm Mike and your should hire me to build your website">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
-    
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
+
+
+
+	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
 
     <title>Contact us</title>
@@ -20,7 +22,7 @@
 	<div class="container bloc-sm">
 		<nav class="navbar row" aria-label="Main navigation" role="navigation">
 			<div class="navbar-header">
-				<a class="navbar-brand" href="index.html"><img src="img/atlanta%20web%20design%20logo.webp" alt="logo GoMike Designs" width='214.25' height='40' ></a>
+				<a class="navbar-brand" href="index.html"><img src="img/atlanta%20web%20design%20logo.webp" alt="Homepage" width='214' height='40' ></a>
 				<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 				</button>
@@ -37,15 +39,15 @@
 <!-- Top navigation END -->
 
 <!-- Main container -->
-<main class="page-container" id="top">
+<main class="page-container">
 <!-- How to get in tough -->
 <section class="bloc bg-dots-bg bg-repeat bgc-dark-slate-blue d-bloc bloc-bg-texture texture-paper" id="bloc-6">
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="col-sm-12">
-				<p class="text-center hero-bloc-text tc-white">
+				<h1 class="text-center hero-bloc-text tc-white">
 					Let&rsquo;s talk web design!
-				</p>
+				</h1>
 				<p class="text-center mg-lg tc-white tight-width-whitespace info">
 					I&rsquo;m super excited that you want to work together.<br>Please fill in the form below or get in touch so I can learn about your project <br>and we can setup time to &nbsp;talk websites and Atlanta city love.
 				</p>
@@ -65,7 +67,7 @@
 						<label for="name">
 							Name
 						</label>
-						<input id="name" class="form-control">
+						<input id="name" class="form-control" required>
 					</div>
 					<div class="form-group">
 						<label for="email">
@@ -89,11 +91,11 @@
 					</button>
 				</form>
 			</div>
-			<div class="col-sm-6">
+			<address class="col-sm-6">
 				<p class="contact">
 					mike@gomikedesigns.com<br>+1 (404) 555-1234<br> <br>123 Peachtree Ave. Atlanta, GA<br>Available 9am–5pm, Mon-Fri <br> <br>Interested to learn about my freelace services? <br>Please visit my&nbsp;<a class="other-page" href="index.html">other page</a>.
 				</p>
-			</div>
+			</address>
 		</div>
 	</div>
 </div>
