--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
     
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
 
 	<title>GoMikeDesign</title>
@@ -20,7 +20,7 @@
 	<div class="container bloc-sm">
 		<nav class="navbar row" aria-label="Main navigation" role="navigation">
 			<div class="navbar-header">
-				<a class="navbar-brand" href="index.html"><img src="img/atlanta%20web%20design%20logo.webp" alt="logo GoMike Designs" width='214' height='40' ></a>
+				<a class="navbar-brand" href="index.html"><img src="img/atlanta%20web%20design%20logo.webp" alt="Homepage" width='214' height='40' ></a>
 				<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 				</button>
@@ -37,7 +37,7 @@
 <!-- Top navigation END -->
 
 <!-- Main container -->
-<main class="page-container"></main>
+<main class="page-container">
 <!-- Greeting -->
 <section class="bloc bgc-dark-slate-blue bg-atlanta-20made-20sign d-bloc bg-t-edge bloc-bg-texture texture-paper b-parallax" id="bloc-1-hero">
 	<div class="container bloc-lg">
@@ -65,7 +65,7 @@
 		<div class="row voffset-lg med-width-whitespace">
 			<div class="col-sm-4">
 				<div class="text-center">
-					<span class="et-icon-browser sm-shadow icon-dark-slate-blue icons icon-lg"></span>
+					<span class="et-icon-browser sm-shadow icon-dark-slate-blue icons icon-lg" aria-hidden="true"></span>
 				</div>
 				<h3 class="mg-md text-center service-header">
 					Website Design
@@ -76,7 +76,7 @@
 			</div>
 			<div class="col-sm-4">
 				<div class="text-center">
-					<span class="et-icon-presentation sm-shadow icon-dark-slate-blue icons icon-lg"></span>
+					<span class="et-icon-presentation sm-shadow icon-dark-slate-blue icons icon-lg" aria-hidden="true"></span>
 				</div>
 				<h3 class="mg-md text-center service-header">
 					&nbsp;Website Strategy
@@ -87,7 +87,7 @@
 			</div>
 			<div class="col-sm-4">
 				<div class="text-center">
-					<span class="et-icon-edit sm-shadow icon-dark-slate-blue icons icon-lg"></span>
+					<span class="et-icon-edit sm-shadow icon-dark-slate-blue icons icon-lg" aria-hidden="true"></span>
 				</div>
 				<h3 class="mg-md text-center service-header">
 					Logo Design
@@ -183,6 +183,10 @@
 	</div>
 </nav>
 <!-- Bottom link to contact END -->
+
+<!-- ScrollToTop Button -->
+<a class="bloc-button btn btn-d scrollToTop" onclick="window.scrollTo(0, 0)" aria-label="Go to top of the page" role="navigation"><span class="fa fa-chevron-up"></span></a>
+<!-- ScrollToTop Button END-->
 
 <!-- Footer - Social -->
 <footer class="bloc bgc-dark-slate-blue d-bloc" id="bloc-8">
