--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 <nav class="bloc bgc-dark-slate-blue bg-atlanta-20made-20sign d-bloc bloc-bg-texture texture-paper" id="bloc-5-cta" aria-label="navigation to contact page">
 	<div class="container bloc-lg">
 		<div class="row">
-			<h2 class="mg-md text-center tc-white">
+			<h2 class="mg-md text-center tc-white readable">
 				Ready for a great website? <br>Let&rsquo;s design!
 			</h2>
 			<div class="col-sm-12 text-center">
@@ -229,7 +229,7 @@
     
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="./css/et-line.min.css">
-<script src="./js/jquery-3.6.0.slim.min.js"></script>
+<script src="./js/jquery-2.1.0.min.js"></script>
 <script src="./js/bootstrap.min.js"></script>
 <script src="./js/blocs.min.js"></script>
 <script src="./js/jquery.touchSwipe.min.js"></script>
