--- a/contact.html
+++ b/contact.html
@@ -65,7 +65,7 @@
 						<label for="name">
 							Name
 						</label>
-						<input id="name" class="form-control" required>
+						<input id="name" class="form-control" required aria-invalid="false">
 					</div>
 					<div class="form-group">
 						<label for="email">
@@ -77,7 +77,7 @@
 						<label for="input_504">
 							How did you find me?
 						</label>
-						<input class="form-control" type="email" required id="input_504" />
+						<input class="form-control" type="text" required id="input_504" aria-invalid="false"/>
 					</div>
 					<div class="form-group">
 						<label for="message">
@@ -145,7 +145,7 @@
     
 <link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css">
 <link rel="stylesheet" type="text/css" href="./css/et-line.min.css">
-<script src="./js/jquery-3.6.0.slim.min.js"></script>
+<script src="./js/jquery-2.1.0.min.js"></script>
 <script src="./js/bootstrap.min.js"></script>
 <script src="./js/blocs.min.js"></script>
 <script src="./js/jqBootstrapValidation.min.js"></script>
